# python-libs

./: .actrc  .env  LICENSE  README.md  gen_gh_pylint_report.py  github-action-pylint-report.py  pylintrc  pyproject.toml  requirements-dev.txt  run-pylint.py  run-pytype.py  tox.ini
.github/: act-serial.yaml
.github/workflows/: main.yml  pytype-problem-matcher.json
stubs/six/: __init__.pyi
stubs/six/moves/: __init__.py
tests/: conftest.py  test_biosdevname.py  test_bootloader.py  test_cmd.py  test_cpio.py  test_logger.py  test_pci.py
tests/data/: biosdevname
xcp/: accessor.py  bootloader.py  cmd.py  compat.py  cpiofile.py  mount.py  pci.py  repository.py  version.py  xmlunwrap.py
xcp/net/: ip.py
xcp/net/ifrename/: logic.py
